[gd_scene load_steps=3 format=3 uid="uid://debug_overlay_scene_id"]

[ext_resource type="Script" path="res://src/ui/dev/debug_overlay.gd" id="1_debug_script"]
[ext_resource type="FontFile" path="res://addons/gut/fonts/AnonymousPro-Regular.ttf" id="2_font"]

[node name="DebugOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_debug_script")

[node name="MainMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EntityPanel" type="PanelContainer" parent="MainMargin/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="MainMargin/HBox/EntityPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EntityInfoVBox" type="VBoxContainer" parent="MainMargin/HBox/EntityPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TargetLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Target: NONE"

[node name="PositionLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Position:"

[node name="VelocityLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Velocity:"

[node name="HealthLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Health:"

[node name="StateLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "State:"

[node name="FlagsLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Flags:"
autowrap_mode = 3

[node name="TimersLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Timers:"
autowrap_mode = 3

[node name="InputBufferLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Input:"
autowrap_mode = 3

[node name="StateHistoryLabel" type="Label" parent="MainMargin/HBox/EntityPanel/Margin/EntityInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "History:"
autowrap_mode = 3

[node name="GlobalPanel" type="PanelContainer" parent="MainMargin/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="MainMargin/HBox/GlobalPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GlobalInfoVBox" type="VBoxContainer" parent="MainMargin/HBox/GlobalPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FPSLabel" type="Label" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "FPS:"

[node name="FXLabel" type="Label" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "FX:"

[node name="HSeparator" type="HSeparator" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
layout_mode = 2

[node name="PoolsLabel" type="Label" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Object Pools:"

[node name="PoolsScroll" type="ScrollContainer" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="PoolsVBox" type="VBoxContainer" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/PoolsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
layout_mode = 2

[node name="ButtonsGrid" type="GridContainer" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox"]
layout_mode = 2
columns = 2

[node name="ToggleCollisionButton" type="Button" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/ButtonsGrid"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Shapes (O)"

[node name="ToggleInvincibilityButton" type="Button" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/ButtonsGrid"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Player God (L)"

[node name="PauseButton" type="Button" parent="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/ButtonsGrid"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Pause (P)"

[connection signal="toggled" from="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/ButtonsGrid/ToggleCollisionButton" to="." method="_on_toggle_collision_toggled"]
[connection signal="toggled" from="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/ButtonsGrid/ToggleInvincibilityButton" to="." method="_on_toggle_invincibility_toggled"]
[connection signal="toggled" from="MainMargin/HBox/GlobalPanel/Margin/GlobalInfoVBox/ButtonsGrid/PauseButton" to="." method="_on_pause_toggled"]